Update start scripts